--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <button v-on:click="counter++">Increase</button><br>
         <button v-on:click="counter--">Decrease</button><br>
         <button v-on:click="reset">Reset</button>
-        <p>Counter: {{ counter }}</p>
+        <p>Counter123: {{ counter }}</p>
         <p>{{ result() }}</p>
     </div>
     <script src="app.js"></script>
